teste google analytics

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
     </main>
     <footer>
         <p>Site Criado por <a href="https://www.instagram.com/yuta_freitas/" target="_blank">Yutá Freitas</a> para a <a href="https://www.instagram.com/unimoradas/" target="_blank">Associação Unimoradas</a></p>
-        <p><address>Endereço: Rua Enio Melo, 58 - Hípica, Porto Alegre - RS, 91787-237</address></p>
+        <address>Endereço: Rua Enio Melo, 58 - Hípica, Porto Alegre - RS, 91787-237</address>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HQYSWH17EW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HQYSWH17EW');
+    </script>
 </body>
 </html>
